--- a/configure.ac
+++ b/configure.ac
@@ -129,6 +129,9 @@ fi
 LIBCURL_CHECK_CONFIG(, 7.15.2, ,
   [AC_MSG_ERROR([Missing required libcurl >= 7.15.2])])
 
+COMPAT_LIBS=-lcompat
+AC_SUBST(COMPAT_LIBS)
+
 AC_SUBST(JANSSON_LIBS)
 AC_SUBST(PTHREAD_FLAGS)
 AC_SUBST(PTHREAD_LIBS)
